public/css/style.css
/* ... */
.favorite-button:enabled {
  cursor: pointer;
}

.favorite-button:focus-visible {
  outline: 2px solid var(--accent-color);
  outline-offset: 2px;
}

.favorite-button:enabled:hover {
  color: var(--accent-color-60);
}

.favorite-button:enabled:active {
  color: var(--accent-color);
}

.favorite-button:enabled[aria-pressed="true"]:active {
  color: var(--background-primary-color-alter);
}

.favorite-button::before {
  /* Increases the clickable area to 40 pixels. */
  content: "";
  position: absolute;
  inset: calc((100% - 40px) / 2);
}

.favorite-button::after {
  content: "";
  grid-area: 1 / 1 / 2 / 2;
  width: 28px;
  height: 28px;
  min-width: 100%;
  max-width: 100%;
  min-height: 100%;
  max-height: 100%;
  background: currentColor;
  mask: url("../img/icons/star.svg") no-repeat 50% 50% / contain;
}

/* #endregion */

/* #region flatpickr */

.flatpickr-calendar .flatpickr-days .flatpickr-day.selected {
  background-color: var(--brand-color);
  border-color: var(--brand-color);
}

/* #endregion */

/* #region gallery */

.gallery {
  display: flex;
  padding: 0 20px;
  column-gap: 5px;
  overflow-x: auto;
}

.gallery:focus-visible {
  outline: 2px solid var(--accent-color);
}

.gallery__image {
  width: 228px;
  height: 152px;
  border-radius: 4px;
  object-fit: cover;
}

/* #endregion*/

/* #region page */

.page__body {
  min-width: 1200px;
  margin: 0;
  font: 400 15px/18px "Montserrat", "Arial", sans-serif;
  color: var(--text-primary-color);
  background: var(--background-primary-color);
}

/* #endregion */

/* #region trip */

.trip {
  --trip-grid-column-gap: 18px;
  --trip-list-margin-top: 8px;
  --trip-line-width: 2px;

  --scrollbar-width: calc(100vw - 100%);
  --content-width: 1180px;
  --half-remaining-space: calc((100vw - var(--content-width) - var(--trip-grid-column-gap) * 2) / 2);
  --first-column-width: var(--half-remaining-space);
  --last-column-width: calc(var(--half-remaining-space) - var(--scrollbar-width));

  display: grid;
  min-height: 100dvh;
  grid-template-columns: var(--first-column-width) 82px 42px 1fr 225px 37px 32px 38px 181px 28px 58px var(--last-column-width);
  column-gap: var(--trip-grid-column-gap);
  align-content: start;
}

.trip:has(.trip__message) {
  grid-template-rows: auto 1fr;
}

.trip:has(.trip__list)::before {
  content: "";
  z-index: 0;
  grid-column: 3 / 4;
  grid-row: 1 / 3;
  place-self: stretch center;
  width: var(--trip-line-width);
  margin-top: 30px; /* a little more than trip-header padding-top */
  margin-bottom: calc(-1 * var(--trip-list-margin-top));
  background: var(--background-secondary-color-60);
}

.trip__header {
  grid-column: 1 / -1;
  grid-row: 1 / 2;
}

.trip__message {
  grid-column: 2 / -2;
  align-self: center;
  text-align: center;
  font-size: 44px;
  line-height: 60px;
  font-weight: 500;
  opacity: 0.9;
}

.trip__sort {
  grid-column: 2 / -2;
  grid-row: 2 / 3;
  margin: 22px 0 0;
}

.trip__list {
  grid-column: 2 / -2;
  grid-row: 3 / 4;
  margin: var(--trip-list-margin-top) 0 54px;
}

/* #endregion */

/* #region trip-filter */

.trip-filter {
  display: flex;
  flex-wrap: wrap;
  column-gap: 19px;
}

/* #endregion */

/* #region trip-header */

.trip-header {
  position: relative;
  display: grid;
  padding: 23px 0 10px;
  grid-template-columns: subgrid;
  grid-template-areas:
    ". . logo title  title  title  title  title  price      price      price      ."
    ". . logo dates  dates  dates  dates  dates  price      price      price      ."
    ". . logo filter filter filter filter filter add-button add-button add-button .";
  align-items: start;
  color: var(--text-additional-color);
  overflow-x: hidden;
}

.trip-header::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  z-index: -1;
  width: 100vw;
  background: var(--brand-color) url("../img/header-background.png") 0 0 / cover;
}

.trip-header__logo {
  grid-area: logo;
  width: 100%;
  height: auto;
}

.trip-header__summary {
  display: contents;
}

.trip-header__title {
  grid-area: title;
  margin: 0;
  font-size: 17px;
  line-height: 21px;
  font-weight: 800;
}

.trip-header__dates {
  grid-area: dates;
  margin: 4px 0 0;
  font-size: 13px;
  line-height: 16px;
  font-weight: 800;
  text-transform: uppercase;
  opacity: 0.8;
}

.trip-header__price {
  grid-area: price;
  place-self: center end;
  min-width: 171px;
  margin: 0;
  text-align: center;
  font-size: 21px;
  line-height: 25px;
  font-weight: 700;
}

.trip-header__filter {
  grid-area: filter;
  align-self: end;
}

.trip-header__add-button {
  grid-area: add-button;
  place-self: end;
  margin: 0 0 2px;
}

.trip-header__summary ~ .trip-header__add-button {
  margin-top: 35px;
}

/* #endregion */

/* #region trip-sort */

.trip-sort {
  display: grid;
  grid-template-columns: subgrid;
  justify-items: start;
}

.trip-sort__item:nth-child(1),
.trip-sort__item:nth-child(4),
.trip-sort__item:nth-child(5) {
  grid-column: span 2;
}

.trip-sort__item:nth-child(n + 2) {
  margin-left: -23px;
}

/* #endregion */

/* #region animations */

@keyframes ellipsis {
  0% {
    content: "";
  }
  25% {
    content: ".";
  }
  50% {
    content: "..";
  }
  75% {
    content: "...";
  }
}

/* #endregion*/

